starmath: tdf#97190: don't assert on missing base URL

There are valid scenarios where we don't have a URL at all, such as when
importing MathML from the clipboard.  Also there probably isn't much of
a problem caused by missing base URLs in Math anyway since RDF import is
currently not implemented and i'm not sure if hyperlinks in Math
documents are possible at all.

Change-Id: I13b70ac62542364f329875e292c574883255af5e